refactor: adjusting message transaction

--- a/consumer/src/main/resources/application.yaml
+++ b/consumer/src/main/resources/application.yaml
@@ -6,6 +6,7 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      transaction-id-prefix: tx-
     consumer:
       group-id: test-group
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
