--- a/producer/src/main/resources/application.yaml
+++ b/producer/src/main/resources/application.yaml
@@ -1,12 +1,24 @@
 spring:
   application:
     name: producer
-    server:
-      port: 8081
+  server:
+    port: 8081
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
-      group-id: test-group
+      group-id: entity-processor-group
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       auto-offset-reset: earliest
+      isolation-level: read_committed
+      properties:
+        fetch.min.bytes: 1
+        fetch.max.wait.ms: 500
+        max.poll.interval.ms: 300000
+        max.poll.records: 500
+
+logging:
+  level:
+    com.lrtf.messaging: INFO
+    org.apache.kafka: WARN
+    org.springframework.kafka: WARN
